JSW Devsb/src/objects/Targets__c.object
<CustomObject>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <picklist>
            <picklistValues>
                <fullName>PSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GGBS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Start_Date__c</fullName>
        <formula>DATE( VALUE( TEXT(Year__c) ) , 
CASE( TEXT(Month__c), 
&quot;January&quot;, 1, 
&quot;February&quot;, 2,
&quot;March&quot;, 3,
&quot;April&quot;, 4,
&quot;May&quot;, 5,
&quot;June&quot;, 6,
&quot;July&quot;, 7,
&quot;August&quot;, 8,
&quot;September&quot;, 9,
&quot;October&quot;, 10,
&quot;November&quot;, 11,
12) ,1)</formula>
        <label>Target Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Territory</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>Targets</relationshipLabel>
        <relationshipName>Targets1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <formula>OwnerId +&apos;:&apos;+ Territory__c +&apos;:&apos;+ TEXT(Product_Group__c) +&apos;:&apos;+  TEXT( Month__c ) +&apos;:&apos;+TEXT( Year__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <label>Targets</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TRGT-{0000000000}</displayFormat>
        <label>Targets Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>